<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valentinpoisson.embeddedsystem.LoginActivity">

    <Button
        android:id="@+id/Button"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_green_dark"
        android:elevation="0dp"
        android:onClick="LoginFct"
        android:text="@string/Sign_In"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText2" />

    <TextView
        android:id="@+id/button5"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="StartRegActivity"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/button4"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="46dp"
        android:clickable="true"
        android:onClick="StartPwdActivity"
        android:text="@string/forgotPassword"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="27dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"

        android:text="@string/or"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <EditText
        android:id="@+id/EditText2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/EditText"
        android:layout_marginStart="12dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/EditText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="@string/Email_Address"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>